# a2rchitech

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .openclaw.env  .terminal-server.env  .vercelignore  ABSORPTION_PLAN_MULTICA_TASKDOG.md  AGENTS.md  AGENT_BROWSER_COMPLETE.md  AGENT_BROWSER_INTEGRATION.md  AGENT_BROWSER_SUMMARY.md  AGENT_COMPREHENSIVE_TEST_REPORT.md  AGENT_HUB_COMPLETE.md  AGENT_HUB_E2E_PROOF.md  AGENT_HUB_INTEGRATION_PLAN.md  AGENT_SYSTEM_AUDIT_AND_PACKAGING_PROPOSAL.md  AGENT_TOOL_SELECTION.md  AGENT_WIZARD_CRITICAL_FIXES.md  ALABS-AUDIT-OPENMAIC-INTEGRATION.md  ALABS-LAUNCH-AUDIT.json  ALABS-LAUNCH-KIT.md  ALABS-REINTEGRATION-REPORT.md  ALABS-REMIX-STATUS.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_PARITY.md  ARCHITECTURE_PRODUCT_SURFACES.md  AUTOLAND_IMPLEMENTATION_DAG.md  AUTOLAND_SPEC.md  AVATAR_CREATOR_DAG.md  AVATAR_SYSTEM_ARCHITECTURE.md  BROWSER_EXTENSION_SHELLUI.md  BROWSER_LOCAL_LLM.md  BROWSER_PREVIEW_INTEGRATION.md  BUG_FIXES.md  BYOC_LOCAL_TEST.md  (+161 more)
0-substrate/a2r-agent-system-rails/: Cargo.toml  README.md  build.rs
0-substrate/a2r-agent-system-rails/cli/: COMMANDS.md
0-substrate/a2r-agent-system-rails/spec/: FRESH_CONTEXT_ISOLATION.md  SPEC_OVERVIEW.md
0-substrate/a2r-agent-system-rails/src/: lib.rs  service.rs
0-substrate/a2r-agent-system-rails/tests/: invariants.rs  visual_verification_integration.rs
0-substrate/a2r-embodiment/: Cargo.toml  README.md
0-substrate/a2r-intent-graph-kernel/: Cargo.toml
0-substrate/a2r-intent-graph-kernel/migrations/: 001_init.sql
0-substrate/a2r-intent-graph-kernel/sql/: create_edges.sql  create_events.sql
0-substrate/a2r-intent-graph-kernel/src/: mutation.rs  projection.rs  query.rs  storage.rs  tests.rs
0-substrate/a2r-presentation-kernel/: Cargo.toml
0-substrate/a2r-presentation-kernel/src/: canvas_selector.rs  error.rs  interaction.rs  lib.rs  tokenizer.rs
1-kernel/capsule-system/a2r-capsule-compiler/: Cargo.toml
1-kernel/control-plane/context-control/: Cargo.toml
1-kernel/data/history-ledger/: Cargo.toml
2-governance/quality-score/: Cargo.toml
2-governance/security-network/: Cargo.toml
2-governance/security-network/src/: lib.rs
2-governance/security-network/terminal/: Cargo.toml
2-governance/worktree-manager/: Cargo.toml
2-governance/worktree-manager/src/: lib.rs  types.rs
6-ui/canvas-monitor/: Cargo.toml
6-ui/canvas-monitor/src/: main.rs
7-apps/api/: Cargo.toml  README.md
7-apps/api/src/: agent_session_routes.rs  agents.rs  chrome_session_routes.rs  cli_tools_routes.rs  cloud_deploy_routes.rs  cron_routes.rs  environment_routes.rs  ivkge_routes.rs  ivkge_routes.rs.bak  log_routes.rs  main.rs  mcp_routes.rs  node_job_dispatcher.rs  node_job_queue.rs  node_ws.rs  operator.rs  provider_discovery.rs  rails.rs  runtime_routes.rs  session_routes.rs  shell_ui.rs  tambo_routes.rs  terminal_session.rs  terminal_session_secure.rs  terminal_ws.rs  tools_routes.rs  tui_routes.rs  webvm.rs
7-apps/api/tests/: memory_routes_test.rs  policy_routes_test.rs  workflow_routes_test.rs
7-apps/cli/: COWORK.md  Cargo.toml  HANDOFF.md  commands.json
7-apps/cli/src/: bootstrap.rs  client.rs  command_registry.rs  config.rs  desktop_connector.rs  error.rs  fast_route.rs  main.rs  persistence.rs  tokens.rs
8-cloud/a2r-cloud-api/: Cargo.toml  QUICKSTART.md
8-cloud/a2r-cloud-api/migrations/: 001_initial.sql  003_auth.sql  005_cloud_instances.sql
8-cloud/a2r-cloud-api/src/: error.rs  lib.rs  main.rs
8-cloud/a2r-cloud-core/: Cargo.toml
8-cloud/a2r-cloud-core/src/: lib.rs  preflight.rs  provider.rs
8-cloud/a2r-cloud-deploy/: Cargo.toml
8-cloud/a2r-cloud-deploy/src/: installer.rs  orchestrator.rs  scripts.rs
8-cloud/a2r-cloud-wizard/: Cargo.toml
8-cloud/a2r-cloud-wizard/src/: bootstrap.rs  e2e_tests.rs  state.rs  verifier.rs
8-cloud/executor/: Cargo.toml  T1-A1.status.md  T1-A2.status.md
8-cloud/executor/src/: docker.rs  lib.rs
8-cloud/executor/tests/: common.rs  docker_integration.rs
8-cloud/scheduler/: Cargo.toml
8-cloud/scheduler/src/: daemon.rs  misfire.rs  scheduler.rs
cmd/a2r-api/: Cargo.toml
cmd/a2r-api/src/: main.rs  rails_client_impl.rs  sandbox_routes.rs
cmd/allternit-api/: Cargo.toml  test_axum
cmd/allternit-api/docs/: OPTION_B_REFACTOR.md
cmd/allternit-api/migrations/: V1__baseline_schema.sql  V2__seed_data.sql  V3__agent_session_support.sql
cmd/allternit-api/src/: aci_routes.rs  agent_routes.rs  agent_runtime_routes.rs  agent_session_routes.rs  agents_v1_routes.rs  alabs_routes.rs  analytics_routes.rs  artifact_routes.rs  audit_log_routes.rs  auth.rs  backend_install_routes.rs  board_routes.rs  board_stream_routes.rs  chat_routes.rs  checkpoints_routes.rs  conversation_routes.rs  cowork_routes.rs  cowork_team_routes.rs  db.rs  design_connector_routes.rs  error.rs  fallback_routes.rs  file_routes.rs  h5i_routes.rs  inbox_routes.rs  lib.rs  local_brain_routes.rs  main.rs  mcp_routes.rs  me_routes.rs  memory_routes.rs  metrics.rs  oauth_routes.rs  onboarding_routes.rs  platform_static.rs  playground_routes.rs  provider_routes.rs  rails_client_impl.rs  runtime_backend_routes.rs  runtime_discover_routes.rs  (+15 more)
cmd/allternit-api/tests/: viz_routes_test.rs
cmd/allternit-cloud-wizard/: Cargo.toml
cmd/allternit-cloud-wizard/src/: affiliate.rs  api.rs  bootstrap.rs  capability.rs  checkpoint_store.rs  e2e_tests.rs  handlers.rs  types.rs
cmd/launcher/: Cargo.toml
cmd/launcher/src/: main.rs
infrastructure/cloud/: Cargo.toml
infrastructure/cloud/a2r-cloud-ssh/: Cargo.toml
infrastructure/cloud/allternit-cloud-deploy/: Cargo.toml
infrastructure/cloud/allternit-cloud-ssh/: Cargo.toml
infrastructure/cloud/src/: config.rs  credentials.rs  error.rs  lib.rs  registry.rs  types.rs
infrastructure/executor/: ARCHITECTURE.md  Cargo.toml  T1-A4.status.md  T1-A5.status.md
infrastructure/local/: Cargo.toml  package.json
infrastructure/scheduler/: Cargo.toml
services/open-notebook/: bootstrap.sh  pyproject.toml  start.sh
services/voice/: Cargo.toml  README.md
(+15333 files in other folders)
