[package]
name = "a2rchitech-embodiment"
version = "0.1.0"
edition = "2021"
description = "A2rchitech embodiment control plane for robotics and IoT devices"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
a2rchitech-history = { workspace = true }
a2rchitech-messaging = { workspace = true }
a2rchitech-policy = { workspace = true }
a2rchitech-context-router = { workspace = true }
a2rchitech-memory = { workspace = true }
a2rchitech-providers = { workspace = true }
a2rchitech-runtime-core = { workspace = true }
a2rchitech-skills = { workspace = true }
a2rchitech-workflows = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
a2rchitech-tools-gateway = { workspace = true }
