[package]
name = "presentation-kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"

autoexamples = false

[features]
default = []
run-bin = []

[[bin]]
name = "presentation-kernel"
path = "src/main.rs"
required-features = ["run-bin"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
