[package]
name = "a2r-quality-score"
version = "0.1.0"
edition = "2021"
description = "A2R Quality Score System - Domain grades and entropy scoring"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
a2rchitech-system-law = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
