[package]
name = "worktree-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Git worktree management for agent isolation"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono = { workspace = true, features = ["serde"] }
tempfile.workspace = true
tokio-process = "0.2"

[dev-dependencies]
tokio-test = "0.4"
