[package]
name = "canvas-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
canvas-protocol = { path = "../../0-substrate/protocols/a2r-canvas-protocol" }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
linemux = "0.3"
