[package]
name = "a2rchitech-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
axum = { version = "0.7", features = ["ws", "http1", "http2"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["limit", "trace", "compression-full", "cors"] }
http = "1.0"
hyper = { version = "1.0", features = ["full"] }
uuid = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
semver = { workspace = true }
opentelemetry = { version = "0.20", features = ["trace"] }
opentelemetry_sdk = { version = "0.20", features = ["trace", "rt-tokio"] }
opentelemetry-http = "0.9"
tracing-opentelemetry = "0.23"
utoipa = { version = "4.2", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
prometheus = "0.13"
tokio-tungstenite = "0.20"
futures-util = { version = "0.3", features = ["sink"] }
lazy_static = "1.4"
serde_yaml = "0.9"
rand = "0.8"
a2rchitech-control-plane-service = { path = "../../1-kernel/control-plane/a2r-control/control-plane-impl" }
a2rchitech-memory = { path = "../../4-services/memory/state/memory" }
a2rchitech-workflows = { workspace = true }
a2rchitech-kernel-contracts = { workspace = true }
a2rchitech-runtime-core = { workspace = true }
a2r_runtime = { package = "a2r-runtime", path = "../../1-kernel/infrastructure/a2r-runtime" }
a2rchitech-policy = { workspace = true }
a2rchitech-skills = { workspace = true }
a2rchitech-tools-gateway = { workspace = true }
a2rchitech-registry = { path = "../../1-kernel/control-plane/unified-registry/registry" }
a2rchitech-capsule = { package = "a2r-capsule", path = "../../1-kernel/capsule-system/a2r-capsule" }
a2rchitech-rlm = { path = "../../1-kernel/infrastructure/a2r-rlm" }
a2rchitech-messaging = { workspace = true }
a2rchitech-sdk-core = { path = "../../0-substrate/sdk/sdk-core" }
a2rchitech-sdk-policy = { path = "../../0-substrate/sdk/sdk-policy" }
a2r-security-hardening = { path = "../../2-governance/security-network/security-hardening" }
# P4 DAG Integration crates
a2r-swarm-advanced = { path = "../../1-kernel/infrastructure/swarm-advanced" }
a2r-ivkge-advanced = { path = "../../1-kernel/infrastructure/ivkge-advanced" }
a2r-multimodal-streaming = { path = "../../1-kernel/infrastructure/multimodal-streaming" }
a2r-tambo-integration = { path = "../../1-kernel/infrastructure/tambo-integration" }
a2r-policy-tier-gating = { path = "../../2-governance/identity-access-control/policy-tier-gating" }
mcp = { path = "../../3-adapters/mcp" }
a2r-openclaw-host = { path = "../../1-kernel/infrastructure/a2r-openclaw-host" }
a2r_agent_system_rails = { package = "a2r-agent-system-rails", path = "../../0-substrate/a2r-agent-system-rails" }
reqwest = { version = "0.12", features = ["json"] }
chrono = { workspace = true }
md5 = "0.7"
walkdir = "2.5"
dirs = "5.0"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
# DAG N3-N16 Runtime Services
a2r-driver-interface = { path = "../../1-kernel/infrastructure/a2r-driver-interface" }
a2r-process-driver = { path = "../../1-kernel/execution/a2r-process-driver" }
a2r-firecracker-driver = { path = "../../1-kernel/execution/a2r-firecracker-driver" }
a2rchitech-budget-metering = { path = "../../4-services/orchestration/budget-metering" }
a2r-replay = { path = "../../2-governance/a2r-replay" }
a2r-prewarm = { path = "../../4-services/orchestration/a2r-prewarm" }
a2r-environment-spec = { path = "../../1-kernel/infrastructure/a2r-environment-spec" }
mcp-client = { path = "../../crates/mcp-client" }
# A2R Terminal
a2r-terminal = { path = "../../2-governance/security-network/terminal" }
# A2R Node Protocol (shared types)
a2r-protocol = { path = "../../0-substrate/a2r-protocol" }

# JWT authentication
jsonwebtoken = "9.3"

# Cloud Provider SDKs - optional (enabled by cloud-deploy feature)
aws-config = { version = "1.5", optional = true }
aws-sdk-ec2 = { version = "1.105", optional = true }
# google-cloud-compute-v1 = "0.1"
azure_mgmt_compute = { version = "0.21", optional = true }
azure_identity = { version = "0.21", optional = true }

# SVG/PNG/PDF Rendering
resvg = { version = "0.44" }
printpdf = { version = "0.7", features = ["embedded_images"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
gif = "0.13"
base64 = { workspace = true }

[features]
default = []
cloud-deploy = ["aws-config", "aws-sdk-ec2", "azure_mgmt_compute", "azure_identity"]

[dev-dependencies]
tempfile = "3.10"
a2rchitech-history = { path = "../../1-kernel/data/history-ledger" }
a2rchitech-messaging = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
