[package]
name = "a2r-cli"
version = "0.1.0"
edition = "2021"
description = "A2R Command Line Interface"
license = "MIT OR Apache-2.0"

[[bin]]
name = "a2r"
path = "src/main.rs"

[dependencies]
# Internal crates
a2r-driver-interface = { path = "../../domains/kernel/drivers/a2r-driver-interface" }
a2r-session-manager = { path = "../../domains/kernel/service/a2r-session-manager" }
a2r-firecracker-driver = { path = "../../domains/kernel/service/a2r-firecracker-driver" }

# Apple Virtualization.framework driver (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
a2r-apple-vf-driver = { path = "../../domains/kernel/service/a2r-apple-vf-driver" }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Terminal UI
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Colors/Formatting
colored = "2"

# Table formatting
tabled = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
atty = "0.2"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }

# Token generation
base64 = "0.22"
rand = "0.8"

# Additional serialization
serde_with = "3"

# Configuration
dirs = "5"

# Process management
nix = { version = "0.29", features = ["process", "signal", "term", "fs", "ioctl"] }
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Bytes handling for streaming
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
# sqlx-test = "0.1"
