[package]
name = "a2r-cloud-core"
version = "0.1.0"
edition = "2021"
description = "A2R Cloud Core - Provider traits, types, and registry"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
