[package]
name = "a2r-cloud-deploy"
version = "0.1.0"
edition = "2021"
description = "A2R Cloud Deploy - Deployment automation and orchestration"

[dependencies]
a2r-cloud-core = { path = "../a2r-cloud-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
