# OWNER: T1-A4

[package]
name = "a2r-executor"
version = "0.1.0"
edition = "2021"
authors = ["A2R Team <team@a2r.io>"]
license = "MIT OR Apache-2.0"
description = "A2R Executor - Docker container orchestration for job execution"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Docker client
bollard = "0.15"

# Utils
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
