[package]
name = "allternit-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "allternit-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
async-stream = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
urlencoding = "2.1"
tokio-util = { version = "0.7", features = ["io"] }

# Internal crates - Rails & Cowork
allternit-agent-system-rails = { path = "../../domains/kernel/allternit-agent-system-rails" }
allternit-cowork-runtime = { path = "../../infrastructure/executor/cowork/cowork/allternit-cowork-runtime" }
allternit-cowork-scheduler = { path = "../../infrastructure/executor/cowork/cowork/allternit-cowork-scheduler" }

# Internal crates - Execution
allternit-driver-interface = { path = "../../domains/kernel/drivers/allternit-driver-interface" }
allternit-firecracker-driver = { path = "../../domains/kernel/service/allternit-firecracker-driver" }
allternit-session-manager = { path = "../../domains/kernel/service/allternit-session-manager" }

[target.'cfg(target_os = "macos")'.dependencies]
allternit-apple-vf-driver = { path = "../../domains/kernel/service/allternit-apple-vf-driver" }

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dirs = "5"

# PNG Rendering dependencies
resvg = "0.41"
usvg = "0.41"
tiny-skia = "0.11"
image = "0.24"
base64 = "0.22"

# PDF Rendering dependencies
printpdf = "0.6"

# Testing
[dev-dependencies]
axum-test = "14"

[features]
default = ["vm-driver"]
vm-driver = []
