[package]
name = "allternit-cloud-wizard"
version = "0.1.0"
edition = "2021"
description = "Allternit Cloud Deploy Wizard - Enterprise BYOC deployment with preflight, verification, and failure handling"

[dependencies]
# Allternit internal
allternit-cloud-ssh = { path = "../../infrastructure/cloud/allternit-cloud-ssh" }
allternit-cloud-hetzner = { path = "../../infrastructure/providers/hetzner" }

# Web framework
axum = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async trait
async-trait = "0.1"

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
