# OWNER: T1-A1

[package]
name = "a2r-multi-region"
version = "0.1.0"
edition = "2021"
description = "Multi-region infrastructure for A2rchitech - replication, health monitoring, failover"

[workspace]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
rand = "0.8"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
